# spectral-dcd

./: .gitignore  LICENSE  README.md  demo_full_benchmark_with_intermediate.py  demo_intermediate_iterations.py  pyproject.toml  test_intermediate_iterations.py
alg/: spectral_geodesic_smoothing.py
spectraldcd/: __init__.py
spectraldcd/alg/: gcn_link_prediction.py  spectral_geodesic_smoothing.py  temporal_gcn_link_prediction.py  temporal_gcn_link_prediction_new.py
spectraldcd/experiments/: demo.ipynb  dyn_graph_benchmarks.py  dynamic_simplesbm.py  metrics.py
spectraldcd/visualization/: metric_plotting.py  style.mplstyle
tnetwork_checkpoints/geodesic_nocanon_eig32_hid32_lay2_ep2000_lr5e-04_wd1e-04/: checkpoint_epoch_1600.pth  checkpoint_epoch_1700.pth  checkpoint_epoch_1800.pth  checkpoint_epoch_1900.pth  checkpoint_epoch_2000.pth
tnetwork_checkpoints/laplacian_nocanon_eig32_hid32_lay2_ep2000_lr5e-04_wd1e-04/: checkpoint_epoch_1600.pth  checkpoint_epoch_1700.pth  checkpoint_epoch_1800.pth  checkpoint_epoch_1900.pth  checkpoint_epoch_2000.pth
tnetwork_results/: geodesic_nocanon_eig32_hid32_lay2_ep2000_lr5e-04_wd1e-04_model_weights.pth  geodesic_nocanon_eig32_hid32_lay2_ep2000_lr5e-04_wd1e-04_summary.json  laplacian_nocanon_eig32_hid32_lay2_ep2000_lr5e-04_wd1e-04_model_weights.pth  laplacian_nocanon_eig32_hid32_lay2_ep2000_lr5e-04_wd1e-04_summary.json
