[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spectraldcd"
author = "Jacob Hume"
author-email = "jakehume@umich.edu"
requires = [
    "alabaster",
    "attrs",
    "Babel",
    "beautifulsoup4",
    "bidict",
    "bleach",
    "blinker",
    "bokeh",
    "certifi",
    "charset-normalizer",
    "click",
    "contourpy",
    "cycler",
    "defusedxml",
    "docutils",
    "fastjsonschema",
    "ffmpeg-python",
    "Flask",
    "flit",
    "flit_core",
    "fonttools",
    "future",
    "idna",
    "igraph",
    "imageio",
    "imagesize",
    "itsdangerous",
    "Jinja2",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter_client",
    "jupyter_core",
    "jupyterlab_pygments",
    "kiwisolver",
    "MarkupSafe",
    "matplotlib",
    "mistune",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nbsphinx",
    "networkx",
    "numpy",
    "packaging",
    "pandas",
    "pandocfilters",
    "pillow",
    "platformdirs",
    "progressbar2",
    "Pygments",
    "pyparsing",
    "python-dateutil",
    "python-louvain",
    "python-utils",
    "pytz",
    "PyYAML",
    "pyzmq",
    "referencing",
    "requests",
    "rpds-py",
    "scikit-learn",
    "scipy",
    "seaborn",
    "six",
    "snowballstemmer",
    "sortedcontainers",
    "soupsieve",
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jquery",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "texttable",
    "threadpoolctl",
    "tinycss2",
    "tnetwork",
    "toml",
    "tomli",
    "tomli_w",
    "tornado",
    "traitlets",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "webencodings",
    "Werkzeug",
    "wxPython",
    "xyzservices",
]
