[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spectraldcd"
author = "Jacob Hume"
author-email = "jakehume@umich.edu"
requires = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "networkx",
    "pandas",
    "torch",
    "torch-geometric",
    "tnetwork",
    "python-louvain",
    "cdlib",
    "joblib",
]
